--- a/design.html
+++ b/design.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>后台管理</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/common.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
@@ -13,12 +14,11 @@
             <h1 class="topbar-logo none"><a href="index.html" class="navbar-brand">后台管理</a></h1>
             <ul class="navbar-list clearfix">
                 <li><a class="on" href="index.html">首页</a></li>
-                <li><a href="http://www.17sucai.com/" target="_blank">网站首页</a></li>
             </ul>
         </div>
         <div class="top-info-wrap">
             <ul class="top-info-list clearfix">
-                <li><a href="#">管理员</a></li>
+                 <li id="username">景升</li>
                 <li><a href="#">修改密码</a></li>
                 <li><a href="#">退出</a></li>
             </ul>
@@ -32,25 +32,12 @@
         </div>
         <div class="sidebar-content">
             <ul class="sidebar-list">
-                <li>
-                    <a href="#"><i class="icon-font">&#xe003;</i>常用操作</a>
+                 <li>
+                    <a href="#"><i class="icon-font">&#xe003;</i>收件箱</a>
                     <ul class="sub-menu">
-                        <li><a href="design.html"><i class="icon-font">&#xe008;</i>作品管理</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe005;</i>博文管理</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe006;</i>分类管理</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe004;</i>留言管理</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe012;</i>评论管理</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe052;</i>友情链接</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe033;</i>广告管理</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="icon-font">&#xe018;</i>系统管理</a>
-                    <ul class="sub-menu">
-                        <li><a href="system.html"><i class="icon-font">&#xe017;</i>系统设置</a></li>
-                        <li><a href="system.html"><i class="icon-font">&#xe037;</i>清理缓存</a></li>
-                        <li><a href="system.html"><i class="icon-font">&#xe046;</i>数据备份</a></li>
-                        <li><a href="system.html"><i class="icon-font">&#xe045;</i>数据还原</a></li>
+                        <li><a href="#"><i class="icon-font">&#xe004;</i>未分发</a></li>
+                        <li><a href="#"><i class="icon-font">&#xe037;</i>已分发</a></li>
+                        <li><a href="design.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                     </ul>
                 </li>
             </ul>
@@ -95,52 +82,38 @@
                     <table class="result-tab" width="100%">
                         <tr>
                             <th class="tc" width="5%"><input class="allChoose" name="" type="checkbox"></th>
-                            <th>排序</th>
-                            <th>ID</th>
-                            <th>标题</th>
-                            <th>审核状态</th>
-                            <th>点击</th>
-                            <th>发布人</th>
-                            <th>更新时间</th>
-                            <th>评论</th>
+                            <th>发件人</th>
+                            <th>主题</th>
+                            <th>日期</th>
+                            <th>状态</th>
                             <th>操作</th>
                         </tr>
                         <tr>
                             <td class="tc"><input name="id[]" value="59" type="checkbox"></td>
-                            <td>
-                                <input name="ids[]" value="59" type="hidden">
-                                <input class="common-input sort-input" name="ord[]" value="0" type="text">
-                            </td>
                             <td>59</td>
                             <td title="发哥经典"><a target="_blank" href="#" title="发哥经典">发哥经典</a> …
                             </td>
                             <td>0</td>
-                            <td>2</td>
-                            <td>admin</td>
-                            <td>2014-03-15 21:11:01</td>
-                            <td></td>
                             <td>
                                 <a class="link-update" href="#">修改</a>
                                 <a class="link-del" href="#">删除</a>
+                            </td>
+                            <td>
+                                <button class="btn btn-default">删除</button>
                             </td>
                         </tr>
                         <tr>
                             <td class="tc"><input name="id[]" value="58" type="checkbox"></td>
-                            <td>
-                                <input name="ids[]" value="58" type="hidden">
-                                <input class="common-input sort-input" name="ord[]" value="0" type="text">
-                            </td>
                             <td>58</td>
                             <td title="黑色经典"><a target="_blank" href="#" title="黑色经典">黑色经典</a> …
                             </td>
                             <td>0</td>
-                            <td>35</td>
-                            <td>admin</td>
-                            <td>2013-12-30 22:34:00</td>
-                            <td></td>
                             <td>
                                 <a class="link-update" href="#">修改</a>
                                 <a class="link-del" href="#">删除</a>
+                            </td>
+                            <td>
+                                <button class="btn btn-default">删除</button>
                             </td>
                         </tr>
                     </table>
