--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
         <div class="sidebar-content">
             <ul class="sidebar-list">
                 <li>
-                    <a href="#"><i class="icon-font">&#xe003;</i>常用操作</a>
+                    <a href="#"><i class="icon-font">&#xe003;</i>收件箱</a>
                     <ul class="sub-menu">
-                        <li><a href="design.html"><i class="icon-font">&#xe004;</i>收件箱</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe005;</i>发送邮件</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe006;</i>历史邮件</a></li>
-                        <li><a href="design.html"><i class="icon-font">&#xe004;</i>留言管理</a></li>
+                        <li><a href="#"><i class="icon-font">&#xe004;</i>未分发</a></li>
+                        <li><a href="#"><i class="icon-font">&#xe037;</i>已分发</a></li>
+                        <li><a href="design.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                     </ul>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#"><i class="icon-font">&#xe018;</i>系统管理</a>
                     <ul class="sub-menu">
                         <li><a href="system.html"><i class="icon-font">&#xe017;</i>系统设置</a></li>
@@ -48,7 +47,7 @@
                         <li><a href="system.html"><i class="icon-font">&#xe046;</i>数据备份</a></li>
                         <li><a href="system.html"><i class="icon-font">&#xe045;</i>数据还原</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
