--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>后台管理</title>
+    <title>邮件详情</title>
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/menu-css.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -40,11 +40,11 @@
             <div class="sidebar-content">
                 <ul class="sidebar-list">
                     <li>
-                        <a href="#"><i class="icon-font">&#xe003;</i>收件箱</a>
+                        <a><i class="icon-font">&#xe003;</i>收件箱</a>
                         <ul class="sub-menu">
-                            <li><a href="#"><i class="icon-font">&#xe004;</i>未分发</a></li>
-                            <li><a href="#"><i class="icon-font">&#xe037;</i>已分发</a></li>
-                            <li><a href="design.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
+                            <li><a href="distributor.html"><i class="icon-font">&#xe004;</i>未分发</a></li>
+                            <li><a href="distributor.html"><i class="icon-font">&#xe037;</i>已分发</a></li>
+                            <li><a href="distributor.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -55,26 +55,7 @@
             <div class="crumb-wrap">
                 <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">作品管理</span></div>
             </div>
-            <!-- <div class="search-wrap">
-            <div class="search-content">
-                <form action="#" method="post">
-                    <table class="search-tab">
-                        <tr>
-                            <th width="120">选择分类:</th>
-                            <td>
-                                <select name="search-sort" id="">
-                                    <option value="">全部</option>
-                                    <option value="19">精品界面</option><option value="20">推荐界面</option>
-                                </select>
-                            </td>
-                            <th width="70">关键字:</th>
-                            <td><input class="common-text" placeholder="关键字" name="keywords" value="" id="" type="text"></td>
-                            <td><input class="btn btn-primary btn2" name="sub" value="查询" type="submit"></td>
-                        </tr>
-                    </table>
-                </form>
-            </div>
-        </div> -->
+          
             <div class="result-wrap">
                 <form name="myform" id="myform" method="post">
                     <div class="result-title">
