--- a/not_dist.html
+++ b/not_dist.html
@@ -21,41 +21,14 @@
                 <div class="result-content">
                     <table class="result-tab" width="100%">
                         <tr>
-                            <th class="tc" width="5%"><input class="allChoose" name="" type="checkbox"></th>
+                            <th class="tc" width="5%"><input class="allchoose" name="" type="checkbox"></th>
                             <th>发件人</th>
                             <th>主题</th>
                             <th>日期</th>
-                            <th>状态</th>
+                            <th>是否分发</th>
                             <th>操作</th>
                         </tr>
-                        <tr>
-                            <td class="tc"><input name="id[]" value="59" type="checkbox"></td>
-                            <td>59</td>
-                            <td title="发哥经典"><a href="detail.html" title="发哥经典">发哥经典</a> …
-                            </td>
-                            <td>0</td>
-                            <td>
-                                <a class="link-update" href="#">修改</a>
-                                <a class="link-del" href="#">删除</a>
-                            </td>
-                            <td>
-                                <button class="btn btn-default">删除</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="tc"><input name="id[]" value="58" type="checkbox"></td>
-                            <td>58</td>
-                            <td title="黑色经典"><a href="detail.html" title="黑色经典">黑色经典</a> …
-                            </td>
-                            <td>0</td>
-                            <td>
-                                <a class="link-update" href="#">修改</a>
-                                <a class="link-del" href="#">删除</a>
-                            </td>
-                            <td>
-                                <button class="btn btn-default">删除</button>
-                            </td>
-                        </tr>
+                        
                     </table>
                     <div class="list-page"> 2 条 1/1 页</div>
                 </div>
