--- a/not_dist.html
+++ b/not_dist.html
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="result-content">
-                    <table class="result-tab" width="100%">
+                    <table id="email-list" class="result-tab" width="100%">
                         <tr>
                             <th class="tc" width="5%"><input class="allchoose" name="" type="checkbox"></th>
                             <th>发件人</th>
