--- a/password.html
+++ b/password.html
@@ -1,36 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>修改密码</title>
-    <link rel="stylesheet" type="text/css" href="css/common.css"/>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
+
 <body>
-<div class="topbar-wrap white">
-    <div class="topbar-inner clearfix">
-        <div class="topbar-logo-wrap clearfix">
-            <h1 class="topbar-logo none"><a href="index.html" class="navbar-brand">后台管理</a></h1>
-            <ul class="navbar-list clearfix">
-                <li><a class="on" href="index.html">首页</a></li>
-            </ul>
-        </div>
-        <div class="top-info-wrap">
-            <ul class="top-info-list clearfix">
-                <li><a href="#">管理员</a></li>
-                <li><a href="#">修改密码</a></li>
-                <li><a href="#">退出</a></li>
-            </ul>
+    <div class="topbar-wrap white">
+        <div class="topbar-inner clearfix">
+            <div class="topbar-logo-wrap clearfix">
+                <h1 class="topbar-logo none"><a href="index.html" class="navbar-brand">后台管理</a></h1>
+                <ul class="navbar-list clearfix">
+                    <li><a class="on" href="index.html">首页</a></li>
+                </ul>
+            </div>
+            <div class="top-info-wrap">
+                <ul class="top-info-list clearfix">
+                    <li><a href="#">管理员</a></li>
+                    <li><a href="#">修改密码</a></li>
+                    <li><a href="#">退出</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<div class="container clearfix">
-    <div class="sidebar-wrap">
-        <div class="sidebar-title">
-            <h1>菜单</h1>
-        </div>
-        <div class="sidebar-content">
-            <ul class="sidebar-list">
+    <div class="container clearfix">
+        <div class="sidebar-wrap">
+            <div class="sidebar-title">
+                <h1>菜单</h1>
+            </div>
+            <div class="sidebar-content">
+                <ul class="sidebar-list">
                     <li>
                         <a><i class="icon-font">&#xe003;</i>收件箱</a>
                         <ul class="sub-menu">
@@ -40,49 +43,70 @@
                         </ul>
                     </li>
                 </ul>
+            </div>
         </div>
-    </div>
-    <!--/sidebar-->
-    <div class="main-wrap">
-        <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">修改密码</span></div>
-        </div>
-        <div class="result-wrap">
-            <form action="#" method="post" id="myform" name="myform">
-                <div class="config-items">
-                    <div class="config-title">
-                        <h1><i class="icon-font">&#xe00a;</i>修改密码</h1>
+        <!--/sidebar-->
+        <div class="main-wrap">
+            <div class="crumb-wrap">
+                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">修改密码</span></div>
+            </div>
+            <div class="result-wrap">
+                <form action="#" method="post" id="myform" name="myform">
+                    <div class="config-items">
+                        <div class="config-title">
+                            <h1><i class="icon-font">&#xe00a;</i>修改密码</h1>
+                        </div>
+                        <div class="result-content">
+                            <table width="100%" class="insert-tab">
+                                <tbody>
+                                    <tr>
+                                        <th width="15%"><i class="require-red">*</i>旧密码：</th>
+                                        <td>
+                                            <input type="password" id="password" name="keywords" class="common-text">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><i class="require-red">*</i>新密码：</th>
+                                        <td>
+                                            <input type="password" id="newpassword" name="keywords" class="common-text">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th><i class="require-red">*</i>重复新密码：</th>
+                                        <td>
+                                            <input type="password" id="newpassword2" name="keywords" class="common-text">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th></th>
+                                        <td>
+                                            <input id="submit" type="button" value="提交" class="btn btn-primary btn6 mr10">
+                                            <input type="button" value="返回" onClick='window.location.href="distributor.html"' class="btn btn6">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th></th>
+                                        <td>
+                                            <div id="tip" style="display:none;text-align: center;width: 120px;" class="text text-success">修改成功！</div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th></th>
+                                        <td>
+                                            <div id="tip2" style="display:none;text-align: center;width: 120px;" class="text text-danger">修改失败！</div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
-                    <div class="result-content">
-                        <table width="100%" class="insert-tab">
-                            <tbody><tr>
-                                <th width="15%"><i class="require-red">*</i>旧密码：</th>
-                                <td><input type="password" id="oldpwd"  name="keywords" class="common-text"></td>
-                            </tr>
-                                <tr>
-                                    <th><i class="require-red">*</i>新密码：</th>
-                                    <td><input type="password" id="newpwd" name="keywords" class="common-text"></td>
-                                </tr>
-                                <tr>
-                                    <th><i class="require-red">*</i>重复新密码：</th>
-                                    <td><input type="password" id="newpwd2" name="keywords" class="common-text"></td>
-                                </tr>
-                               
-                                <tr>
-                                    <th></th>
-                                    <td>
-                                        <input type="submit" value="提交" class="btn btn-primary btn6 mr10">
-                                        <input type="button" value="返回" onClick='window.location.href="distributor.html"' class="btn btn6">
-                                    </td>
-                                </tr>
-                            </tbody></table>
-                    </div>
-                </div>
-                
-            </form>
+                </form>
+            </div>
         </div>
+        <!--/main-->
     </div>
-    <!--/main-->
-</div>
 </body>
+<script src="js/jquery.js"></script>
+<script src="js/password.js"></script>
+
 </html>
