--- a/distributor.html
+++ b/distributor.html
@@ -38,7 +38,7 @@
                     <li>
                         <a href="distributor.html"><i class="icon-font">&#xe003;</i>收件箱</a>
                         <ul class="sub-menu">
-                            <li id="not_send"><a href="not_dist.html" target="iframe"><i class="icon-font">&#xe004;</i>未分发</a></li>
+                            <li id="not_send"><a style="background: #cdcdcd;" href="not_dist.html" target="iframe"><i class="icon-font">&#xe004;</i>未分发</a></li>
                             <li id="al_send"><a href="already_dist.html" target="iframe"><i class="icon-font">&#xe037;</i>已分发</a></li>
                             <li id="sendback"><a href="sendback.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="right">
-                <iframe src="already_dist.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
+                <iframe src="not_dist.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
             </div>
           
         </div>
