--- a/inspector.html
+++ b/inspector.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>审查人员</title>
+    <title>审核人员</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -38,8 +38,8 @@
                     <li>
                         <a><i class="icon-font">&#xe003;</i>收件箱</a>
                         <ul class="sub-menu">
-                            <li id="not_send"><a href="not_dist.html" target="iframe"><i class="icon-font">&#xe004;</i>未分发</a></li>
-                            <li id="al_send"><a href="already_dist.html" target="iframe"><i class="icon-font">&#xe037;</i>已分发</a></li>
+                            <li id="not_send"><a href="not_inspc.html" target="iframe"><i class="icon-font">&#xe004;</i>未审核</a></li>
+                            <li id="al_send"><a href="already_inspc.html" target="iframe"><i class="icon-font">&#xe037;</i>审核通过</a></li>
                             <li id="sendback"><a href="sendback.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
@@ -49,7 +49,7 @@
         <!--/sidebar-->
         <div class="main-wrap">
             <div class="crumb-wrap">
-                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">作品管理</span></div>
+                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">审核邮件</span></div>
             </div>
             <div class="search-wrap">
                 <div class="search-content">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div id="right">
-                <iframe src="already_dist.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
+                <iframe src="not_inspc.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
             </div>
           
         </div>
