--- a/inspector.html
+++ b/inspector.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" href="css/inspector.css">
+    <link rel="stylesheet" href="css/distributor.css">
 </head>
 
 <body>
