--- a/login.html
+++ b/login.html
@@ -10,14 +10,14 @@
 <div class="admin_login_wrap">
     <h1 style="text-align: center">登陆</h1>
     <div class="adming_login_border">
-        <div class="admin_input" >
+        <div class="admin_input">
             <form>
                 <ul class="admin_items">
                     <li>
-                        <input type="text" name="username"  id="username" size="40" class="admin_input_style" placeholder="username"/>
+                        <input type="text" name="username"  id="username" size="40" class="admin_input_style" placeholder="账号" value="deal" />
                     </li>
                     <li>
-                        <input id="password" type="password"  value="admin" id="pwd" size="40" class="admin_input_style" placeholder="password"/>
+                        <input id="password" type="password"  value="deal" id="pwd" size="40" class="admin_input_style" placeholder="admin"/>
                     </li>
                     <li>
                         <input id="login" style="margin-top: 10px;" type="button" tabindex="3" value="登陆" class="btn btn-primary" />
