--- a/handler.html
+++ b/handler.html
@@ -39,9 +39,9 @@
                     <li>
                         <a><i class="icon-font">&#xe003;</i>收件箱</a>
                         <ul class="sub-menu">
-                            <li id="not_send"><a href="not_dist.html"><i class="icon-font">&#xe004;</i>未分发</a></li>
-                            <li id="al_send"><a href="already_dist.html"><i class="icon-font">&#xe037;</i>已分发</a></li>
-                            <li id="sendback"><a href="sendback.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
+                            <li id="not_send"><a href="already_handler.html"><i class="icon-font">&#xe004;</i>已处理</a></li>
+                            <li id="al_send"><a href="not_handler.html"><i class="icon-font">&#xe037;</i>未处理</a></li>
+                            <li id="sendback"><a href="not_passed.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div id="right">
-                <iframe src="already_dist.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
+                <iframe src="already_handler.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
             </div>
           
         </div>
@@ -86,6 +86,6 @@
     </div>
 </body>
 <script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/distributor.js"></script>
+<script src="js/handler.js"></script>
 
 </html>
