--- a/inspector.html
+++ b/inspector.html
@@ -16,7 +16,7 @@
             <div class="topbar-logo-wrap clearfix">
                 <h1 class="topbar-logo none"><a href="index.html" class="navbar-brand">分发</a></h1>
                 <ul class="navbar-list clearfix">
-                    <li><a class="on" href="index.html">首页</a></li>
+                    <li><a class="on" href="inspector.html">首页</a></li>
                 </ul>
             </div>
             <div class="top-info-wrap">
@@ -40,7 +40,6 @@
                         <ul class="sub-menu">
                             <li id="not_send"><a href="not_inspc.html" target="iframe"><i class="icon-font">&#xe004;</i>未审核</a></li>
                             <li id="al_send"><a href="already_inspc.html" target="iframe"><i class="icon-font">&#xe037;</i>审核通过</a></li>
-                            <li id="sendback"><a href="sendback.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -49,7 +48,7 @@
         <!--/sidebar-->
         <div class="main-wrap">
             <div class="crumb-wrap">
-                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">审核邮件</span></div>
+                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">收件箱</span></div>
             </div>
             <div class="search-wrap">
                 <div class="search-content">
