--- a/distributor.html
+++ b/distributor.html
@@ -40,7 +40,7 @@
                         <ul class="sub-menu">
                             <li id="not_send"><a style="background: #cdcdcd;" href="not_dist.html" target="iframe"><i class="icon-font">&#xe004;</i>未分发</a></li>
                             <li id="al_send"><a href="already_dist.html" target="iframe"><i class="icon-font">&#xe037;</i>已分发</a></li>
-                            <li id="sendback"><a href="sendback.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
+                            <!-- <li id="sendback"><a href="sendback.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li> -->
                         </ul>
                     </li>
                 </ul>
@@ -49,7 +49,7 @@
         <!--/sidebar-->
         <div class="main-wrap">
             <div class="crumb-wrap">
-                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">作品管理</span></div>
+                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">收件箱</span></div>
             </div>
             <div class="search-wrap">
                 <div class="search-content">
@@ -60,8 +60,8 @@
                                 <td>
                                     <select name="search-sort" id="">
                                         <option value="">全部</option>
-                                        <option value="19">精品界面</option>
-                                        <option value="20">推荐界面</option>
+                                        <option value="19">已分发</option>
+                                        <option value="20">未分发</option>
                                     </select>
                                 </td>
                                 <th width="70">关键字:</th>
