--- a/not_handler.html
+++ b/not_handler.html
@@ -11,13 +11,6 @@
 <body>
 	<div class="result-wrap">
             <form name="myform" id="myform" method="post">
-                <div class="result-title">
-                    <div class="result-list">
-                        <a href="insert.html"><i class="icon-font"></i>这是已分发页面</a>
-                        <a id="batchDel" href="javascript:void(0)"><i class="icon-font"></i>批量删除</a>
-                        <a id="updateOrd" href="javascript:void(0)"><i class="icon-font"></i>更新排序</a>
-                    </div>
-                </div>
                 <div class="result-content">
                     <table class="result-tab" width="100%">
                         <tr>
@@ -27,11 +20,9 @@
                             <th>更新日期</th>
                             <th>截止日期</th>
                             <th>分发人员</th>
-                            <th>操作</th>
                         </tr>                        
 
                     </table>
-                    <div class="list-page"> 2 条 1/1 页</div>
                 </div>
             </form>
         </div>
@@ -42,6 +33,7 @@
     var session = window.sessionStorage;
     $(document).ready(function() {
         getNeedMail();    
+        detail();
     })
 
     //获取处理列表中还未处理的邮件
@@ -68,14 +60,11 @@
                     var text = '<tr data-id='+mail_id+'>'
                                 +'<td class="tc"><input id='+mail_id+' type="checkbox"></td>'
                                 +'<td>'+from+'</td>'
-                                +'<td><a data-detail=true data-id='+email_ids+' href="detail_deal.html" >'+title+'</a></td>'
+                                +'<td><a data-detail=true data-id='+mail_id+' href="detail_deal.html" >'+title+'</a></td>'
                                 +'<td>'+update_time+'</td>'
                                 +'<td>'+deadline+'</td>'
                                 +'<td>'
                                 +'<a>'+duser_name+'</a>'
-                                +'</td>'
-                                +'<td>'
-                                +'<button class="btn btn-default">删除</button>'
                                 +'</td>'
                                 +'</tr>';                
                     $(".result-tab").append(text);                
@@ -96,7 +85,7 @@
         $(".result-tab").on('click',function(e) {
             var obj = e.target;
             if ($(obj).attr('data-detail')) {
-                session.chooseid = $(obj).data('id');
+                session.chooseid = $(obj).attr('data-id');
             };            /* Act on the event */
         });
     }
