--- a/setting.html
+++ b/setting.html
@@ -41,7 +41,7 @@
                         <a><i class="icon-font">&#xe003;</i>基本管理</a>
                         <ul class="sub-menu">
                             <li id="mail_setting"><a href="mail_setting.html" target="iframe"><i class="icon-font">&#xe004;</i>邮箱设置</a></li>
-                            <li id="account_management"><a href="already_dist.html" target="iframe"><i class="icon-font">&#xe037;</i>账户管理</a></li>
+                            <li id="account_management"><a href="account_management.html" target="iframe"><i class="icon-font">&#xe037;</i>账户管理</a></li>
                         </ul>
                     </li>
                 </ul>
