--- a/password.html
+++ b/password.html
@@ -20,9 +20,9 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                    <li><a href="#">管理员</a></li>
-                    <li><a href="#">修改密码</a></li>
-                    <li><a href="#">退出</a></li>
+                    <li id="username">景升</li>
+                    <li><a href="password.html">修改密码</a></li>
+                    <li><a href="login.html">退出</a></li>
                 </ul>
             </div>
         </div>
@@ -30,16 +30,15 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
                     <li>
                         <a><i class="icon-font">&#xe003;</i>收件箱</a>
                         <ul class="sub-menu">
-                            <li id="not_send"><a href="not_dist.html" target="iframe"><i class="icon-font">&#xe004;</i>未分发</a></li>
-                            <li id="al_send"><a href="already_dist.html" target="iframe"><i class="icon-font">&#xe037;</i>已分发</a></li>
-                            <li id="sendback"><a href="sendback.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
+                            <li id="not_send"><a href="distributor.html" target="iframe"><i class="icon-font">&#xe004;</i>未分发</a></li>
+                            <li id="al_send"><a href="distributor.html" target="iframe"><i class="icon-font">&#xe037;</i>已分发</a></li>
+                            <li id="sendback"><a href="distributor.html" target="iframe"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
                 </ul>
