--- a/distributor.html
+++ b/distributor.html
@@ -31,7 +31,7 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
+                <h1></h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
@@ -49,31 +49,11 @@
         <!--/sidebar-->
         <div class="main-wrap">
             <div class="crumb-wrap">
-                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">收件箱</span></div>
+                <div class="crumb-list"><i class="icon-font"></i><a href="distributor.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">收件箱</span></div>
             </div>
             <div class="search-wrap">
                 <div class="search-content">
-                    <form action="#" method="post">
-                        <table class="search-tab">
-                            <tr>
-                                <th width="120">选择分类:</th>
-                                <td>
-                                    <select name="search-sort" id="">
-                                        <option value="">全部</option>
-                                        <option value="19">已分发</option>
-                                        <option value="20">未分发</option>
-                                    </select>
-                                </td>
-                                <th width="70">关键字:</th>
-                                <td>
-                                    <input class="common-text" placeholder="关键字" name="keywords" value="" id="" type="text">
-                                </td>
-                                <td>
-                                    <input class="btn btn-primary btn2" name="sub" value="查询" type="submit">
-                                </td>
-                            </tr>
-                        </table>
-                    </form>
+                    
                 </div>
             </div>
             <div id="right">
