--- a/handler.html
+++ b/handler.html
@@ -22,9 +22,9 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                    <li id="username">景升</li>
-                    <li><a href="#">修改密码</a></li>
-                    <li><a href="#">退出</a></li>
+                     <li id="username">景升</li>
+                    <li><a href="password.html">修改密码</a></li>
+                    <li><a href="login.html">退出</a></li>
                 </ul>
             </div>
         </div>
@@ -32,7 +32,6 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
@@ -42,6 +41,7 @@
                              <li id="al_send"><a href="not_handler.html"><i class="icon-font">&#xe037;</i>未处理</a></li>
                             <li id="not_send"><a href="already_handler.html"><i class="icon-font">&#xe004;</i>已处理</a></li>
                             <li id="sendback"><a href="sendback_handler.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
+                            <li id="send"><a href="detail_write.html" target="_parent"><i class="icon-font">&#xe004;</i>发送邮件</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -54,27 +54,7 @@
             </div>
             <div class="search-wrap">
                 <div class="search-content">
-                    <form action="#" method="post">
-                        <table class="search-tab">
-                            <tr>
-                                <th width="120">选择分类:</th>
-                                <td>
-                                    <select name="search-sort" id="">
-                                        <option value="">全部</option>
-                                        <option value="19">精品界面</option>
-                                        <option value="20">推荐界面</option>
-                                    </select>
-                                </td>
-                                <th width="70">关键字:</th>
-                                <td>
-                                    <input class="common-text" placeholder="关键字" name="keywords" value="" id="" type="text">
-                                </td>
-                                <td>
-                                    <input class="btn btn-primary btn2" name="sub" value="查询" type="submit">
-                                </td>
-                            </tr>
-                        </table>
-                    </form>
+                   
                 </div>
             </div>
             <div id="right">
