--- a/already_dist_detail.html
+++ b/already_dist_detail.html
@@ -24,8 +24,8 @@
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
                     <li id="username">景升</li>
-                    <li><a href="#">修改密码</a></li>
-                    <li><a href="#">退出</a></li>
+                    <li><a href="password.html">修改密码</a></li>
+                    <li><a href="login.html">退出</a></li>
                 </ul>
             </div>
         </div>
@@ -33,7 +33,6 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
