--- a/already_inspc.html
+++ b/already_inspc.html
@@ -26,4 +26,6 @@
             </form>
         </div>
 </body>
+<script src="js/jquery.js"></script>
+<script src="js/already_inspc.js"></script>
 </html>
