--- a/detail_deal.html
+++ b/detail_deal.html
@@ -36,7 +36,6 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
@@ -113,21 +112,13 @@ $(document).ready(function() {
 
     getMailDetail();
     sendback();
-    $('#answer').click(function(event) {
-        console.log("success");
-                    iosOverlay({
-                        text: "回复成功!",
-                        duration: 2e3,
-                        icon: 'images/check.png'
-                    });
-        console.log(session);
-    });
+    answer();
 
     $('#commit').click(function(event) {
         var info = {
             'username': session.username,
             'mail_id': session.chooseid,
-            'content': $('#editor').val(),
+            'content': $("#editor").val(),
             'user_id': 3
         }
         $.ajax({
@@ -166,7 +157,7 @@ function getMailDetail() {
             type: 'post',
             dataType: 'json',
             data: {
-                'mail_id': 1
+                'mail_id': session.chooseid
             },
         })
         .done(function(data) {
@@ -179,7 +170,7 @@ function getMailDetail() {
             $('#title').text(title);
             $('#from').text(from);
             $('#to').text('北京sxbox科技有限公司');
-            $('.details').text(content);
+            $('.details').html(content);
         })
         .fail(function() {
             console.log("error");
@@ -224,6 +215,44 @@ function sendback() {
     })
 
 
+}
+
+function answer(){
+     $('#answer').click(function(event) {
+
+            var info = {
+                'username':session.username,
+                'mail_id':session.chooseid,
+                'content':$("#editor").val()
+            }
+
+            $.ajax({
+                url: URL+'Handlemail/sendReply',
+                type: 'POST',
+                dataType: 'json',
+                data: info
+            })
+            .done(function(data) {
+                if (data.status) {
+                    iosOverlay({
+                        text: "发送成功!",
+                        duration: 2e3,
+                        icon: 'images/check.png'
+                    });
+                }
+            })
+            .fail(function() {
+                iosOverlay({
+                        text: "发送失败!",
+                        duration: 2e3,
+                        icon: 'images/cross.png'
+                    });
+            })
+            .always(function() {
+                console.log("complete");
+            });
+            
+        });
 }
 </script>
 
