--- a/dist_detail.html
+++ b/dist_detail.html
@@ -26,9 +26,9 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                    <li id="username"></li>
-                    <li><a href="#">修改密码</a></li>
-                    <li><a href="#">退出</a></li>
+                    <li id="username">root</li>
+                    <li><a href="password.html">修改密码</a></li>
+                    <li><a href="handler.html">退出</a></li>
                 </ul>
             </div>
         </div>
@@ -36,7 +36,6 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
