--- a/inspc_detail.html
+++ b/inspc_detail.html
@@ -28,9 +28,9 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                    <li id="username">景升</li>
-                    <li><a href="#">修改密码</a></li>
-                    <li><a href="#">退出</a></li>
+                     <li id="username">景升</li>
+                    <li><a href="password.html">修改密码</a></li>
+                    <li><a href="login.html">退出</a></li>
                 </ul>
             </div>
         </div>
@@ -38,7 +38,6 @@
     <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
@@ -47,7 +46,6 @@
                         <ul class="sub-menu">
                             <li><a href="inspector.html"><i class="icon-font">&#xe004;</i>未审核</a></li>
                             <li><a href="inspector.html"><i class="icon-font">&#xe037;</i>审核通过</a></li>
-                            <li><a href="inspector.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -91,6 +89,9 @@
                     <!-- 内容结束 -->
                 </form>
             </div>
+        </div>
+        <div id="during" style="opacity:0">
+            
         </div>
         <!--/main-->
     </div>
