--- a/setting.html
+++ b/setting.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>分发人员</title>
+    <title>管理员</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -33,15 +33,14 @@
                             <div class="container clearfix">
         <div class="sidebar-wrap">
             <div class="sidebar-title">
-                <h1>菜单</h1>
             </div>
             <div class="sidebar-content">
                 <ul class="sidebar-list">
                     <li>
                         <a><i class="icon-font">&#xe003;</i>基本管理</a>
                         <ul class="sub-menu">
-                            <li id="mail_setting"><a href="mail_setting.html" target="iframe"><i class="icon-font">&#xe004;</i>邮箱设置</a></li>
                             <li id="account_management"><a href="account_management.html" target="iframe"><i class="icon-font">&#xe037;</i>账户管理</a></li>
+                            <li id="mail_setting"><a href="mail_setting.html" target="iframe"><i class="icon-font">&#xe004;</i>邮箱设置</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -50,11 +49,11 @@
         <!--/sidebar-->
         <div class="main-wrap">
             <div class="crumb-wrap">
-                <div class="crumb-list"><i class="icon-font"></i><a href="index.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">基本管理</span></div>
+                <div class="crumb-list"><i class="icon-font"></i><a href="setting.html">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">基本管理</span></div>
             </div>
             
             <div id="right">
-                <iframe src="mail_setting.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
+                <iframe src="account_management.html" frameborder="0" width=100% height=600px scrolling="no" name="iframe"></iframe>
             </div>
           
         </div>
