--- a/dist_detail.html
+++ b/dist_detail.html
@@ -44,7 +44,6 @@
                         <ul class="sub-menu">
                             <li><a href="distributor.html"><i class="icon-font">&#xe004;</i>未分发</a></li>
                             <li><a href="distributor.html"><i class="icon-font">&#xe037;</i>已分发</a></li>
-                            <li><a href="distributor.html"><i class="icon-font">&#xe046;</i>回退邮件</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -63,15 +62,15 @@
                         <div class="col-md-9" style="margin-top: 20px;">
                             <div class="head">
                                 <span style="color: gray">标题:</span>
-                                <b id="title">关于小学期调时间这件事</b>
+                                <b id="title"></b>
                             </div>
                             <div>
                                 <span style="color: gray">发件人:</span>
-                                <span id="from">李旭</span>
+                                <span id="from"></span>
                             </div>
                             <div>
                                 <span style="color: gray">收件人:</span>
-                                <span id="to">魏星</span>
+                                <span id="to"></span>
                             </div>
                             <!-- 具体内容开始 -->
                             <div id="content" class="form-control details">
