--- a/inspc_detail.html
+++ b/inspc_detail.html
@@ -28,7 +28,7 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                     <li id="username">景升</li>
+                     <li id="username"></li>
                     <li><a href="password.html">修改密码</a></li>
                     <li><a href="login.html">退出</a></li>
                 </ul>
@@ -64,15 +64,15 @@
                         <div class="col-md-12" style="margin-top: 20px;">
                             <div class="head" style="margin-bottom: 5px;">
                                 <span class="label label-primary" >标题</span> :
-                                <b id="title" >关于小学期调时间这件事</b>
+                                <b id="title" ></b>
                             </div>
                             <div style="margin-bottom: 5px;">
                                 <span class="tag label label-success">发件人</span> :
-                                <span id="from" c>李旭</span>
+                                <span id="from"></span>
                             </div>
                             <div>
                                 <span class="label label-success">收件人</span> :
-                                <span id="handler" >魏星</span>
+                                <span id="handler" ></span>
                             </div>
                             <!-- 具体内容开始 -->
                             <div id="content" class="form-control details">
@@ -89,9 +89,6 @@
                     <!-- 内容结束 -->
                 </form>
             </div>
-        </div>
-        <div id="during" style="opacity:0">
-            
         </div>
         <!--/main-->
     </div>
