--- a/inspector.html
+++ b/inspector.html
@@ -21,7 +21,7 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                    <li id="username">景升</li>
+                    <li id="username"></li>
                     <li><a href="password.html">修改密码</a></li>
                     <li><a href="login.html">退出</a></li>
                 </ul>
@@ -51,27 +51,6 @@
             </div>
             <div class="search-wrap">
                 <div class="search-content">
-                    <form action="#" method="post">
-                        <table class="search-tab">
-                            <tr>
-                                <th width="120">选择分类:</th>
-                                <td>
-                                    <select name="search-sort" id="">
-                                        <option value="">全部</option>
-                                        <option value="19">精品界面</option>
-                                        <option value="20">推荐界面</option>
-                                    </select>
-                                </td>
-                                <th width="70">关键字:</th>
-                                <td>
-                                    <input class="common-text" placeholder="关键字" name="keywords" value="" id="" type="text">
-                                </td>
-                                <td>
-                                    <input class="btn btn-primary btn2" name="sub" value="查询" type="submit">
-                                </td>
-                            </tr>
-                        </table>
-                    </form>
                 </div>
             </div>
             <div id="right">
