--- a/already_dist_detail.html
+++ b/already_dist_detail.html
@@ -23,7 +23,7 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                    <li id="username">景升</li>
+                    <li id="username"></li>
                     <li><a href="password.html">修改密码</a></li>
                     <li><a href="login.html">退出</a></li>
                 </ul>
@@ -60,15 +60,15 @@
                         <div class="col-md-12" style="margin-top: 20px;">
                             <div class="head">
                                 <span style="color: gray">标题:</span>
-                                <span id="title">关于小学期调时间这件事</span>
+                                <span id="title"></span>
                             </div>
                             <div>
                                 <span style="color: gray">发件人:</span>
-                                <span id="from">李旭</span>
+                                <span id="from"></span>
                             </div>
                             <div>
                                 <span style="color: gray">收件人:</span>
-                                <span id="to">魏星</span>
+                                <span id="to"></span>
                             </div>
                             <!-- 具体内容开始 -->
                             <div id="content" class="details">
