--- a/handler.html
+++ b/handler.html
@@ -22,7 +22,7 @@
             </div>
             <div class="top-info-wrap">
                 <ul class="top-info-list clearfix">
-                     <li id="username">景升</li>
+                     <li id="username"></li>
                     <li><a href="password.html">修改密码</a></li>
                     <li><a href="login.html">退出</a></li>
                 </ul>
