--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <div class="top-info-wrap">
             <ul class="top-info-list clearfix">
-               <!--  <li><a href="#">管理员</a></li> -->
-                <li><a href="#">修改密码</a></li>
-                <li><a href="#">退出</a></li>
+               <li id="username"></li>
+                    <li><a href="password.html">修改密码</a></li>
+                    <li><a href="login.html">退出</a></li>
             </ul>
         </div>
     </div>
